# pyharp

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  =1.3.3  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  README.md  VALIDATION_REPORT.md  bump_version.py  configure.h.in  pyproject.toml  requirements-ci-linux.txt  requirements-ci.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: bump-and-tag.yaml  cd.yml  ci.yml  main.yml  release.yml
cmake/: compilers.cmake  elements.cmake  fmt.cmake  gtest.cmake  parameters.cmake  pydisort.cmake  yamlpp.cmake
cmake/macros/: macro_setup_problem.cmake  macro_setup_test.cmake
cmake/modules/: FindDisort.cmake  FindTorch.cmake
data/: example_hj_profile.csv  fetch_lupa_freedman_2021.sh  h2so4.txt  s8_k_fuller.txt  uran_rfm.atm
docs/: Doxyfile  requirements.txt
docs/_static/: example_sonora_2020.yaml  example_sonora_2020_flux.py
docs/source/: api.rst  builtin_opacities.rst  conf.py  docs.rst  dump_cli.rst  global_states.rst  helper_functions.rst  index.rst  opacity.rst  opacity_classes.rst  plot_cli.rst  python.rst  radiation.rst  radiation_classes.rst  stub.rst  trouble.rst
examples/: CMakeLists.txt  amars-ck.yaml  amars_lw.cpp  amars_rt.cpp  amars_rt.py  amars_rt_backup.cpp  amars_rt_cli.cpp  amars_rt_const_layers.cpp  amars_rt_non_const_layers.cpp  amars_rt_rk3.cpp  amars_sw.cpp  amarsw_rt.cpp  example_grey.yaml  example_grey_flux.py  example_grey_opacity.py  example_h2_cia_legacy.py  example_jit.py  example_jupiter_1d_rt.cpp  example_molecule_dump_opacity.cpp  example_sonora_2020.yaml  example_sonora_2020_flux.py  example_sonora_2020_flux.yaml  example_sonora_2020_opacity.py  jupiter_1d_rt.cpp  jupiter_1d_rt.yaml  jupiter_1d_rt_toon.yaml  molecule_dump_opacity.yaml  pVals.txt
examples/2025-amars/: CMakeLists.txt  TVals.txt  amars-ck.yaml  amars_lw.cpp  amars_rt.cpp  amars_rt.py  amars_rt_cli.cpp  amars_rt_cm.cpp  amars_rt_rk3.cpp  amars_sw.cpp  amars_sw.py  uran-ck.yaml  uran_rt_rk3.cpp
examples/test2/: amars-ck.yaml  example_jit.py  grey-opacity.pt  grey-opacity2.pt
patches/: 01.yamlpp.patch
python/: __init__.py  opacity.pyi  pyharp.cpp  pyharp.pyi  pyopacity.cpp  pyoptions.hpp  pyradiation.cpp  rfm.py
python/api/: fetch_sonora.py
python/csrc/: pyconstants.cpp  pyharp.cpp  pyintegrator.cpp  pymath.cpp  pyopacity.cpp  pyoptions.hpp  pyradiation.cpp  pyrtsolver.cpp
python/h2_cia_legacy/: H2-H2-eq.orton.pt  H2-H2-eq.xiz.pt  H2-H2-nm.orton.pt  H2-H2-nm.xiz.pt  H2-He-eq.orton.pt  H2-He-eq.xiz.pt  H2-He-nm.orton.pt  H2-He-nm.xiz.pt
python/sonora/: sonora.py
python/spectra/: __init__.py  atm_overview.py  atm_overview_cli.py  blackbody.py  cia_plot_cli.py  cli.py  config.py  dataset_io.py  dump_cli.py  hitran_cia.py  hitran_cia_plot.py  hitran_cia_utils.py  hitran_lines.py  hitran_molecule_plot.py  hitran_molecule_utils.py  molecule_plot_cli.py  mt_ckd_h2o.py  orton_xiz_cia.py  output_names.py  plot_cli.py  shared_cli.py  spectrum.py  transmittance.py  utils.py
python/src/: pyharp.cpp  pyradiation.cpp
src/: CMakeLists.txt  compound.hpp  constants.h  harp_formatter.hpp  index.h  loops.cuh  registry.cpp  registry.hpp  version.h
src/integrator/: integrator.cpp  integrator.hpp  integrator_dispatch.cpp  integrator_dispatch.cu  integrator_dispatch.hpp  integrator_formatter.hpp  radiation_model.cpp  radiation_model.hpp
src/math/: interpn.h  interpolation.cpp  interpolation.hpp  locate.h  math_dispatch.cpp
src/opacity/: absorber_rfm.cpp  atm_to_standard_grid.hpp  attenuator.hpp  attenuator_options.cpp  attenuator_options.hpp  fourcolumn.cpp  fourcolumn.hpp  freedman_mean.cpp  grey_cloud.cpp  grey_cloud.hpp  grey_opacities.hpp  h2so4_simple.cpp  h2so4_simple.hpp  helios.cpp  helios.hpp  hydrogen_cia.cpp  hydrogen_cia.hpp  hydrogen_helium_cia.cpp  jit_opacity.cpp  jit_opacity.hpp  jup_gas_ir.cpp  jup_gas_visible.cpp  molecule_cia.cpp  molecule_cia.hpp  molecule_line.cpp  molecule_line.hpp  multiband.cpp  multiband.hpp  netcdf_opacity_utils.hpp  opacity_formatter.hpp  opacity_options.cpp  opacity_options.hpp  picaso_ck.cpp  picaso_ck.hpp  rfm.cpp  rfm.hpp  rfm_ck.cpp  rfm_ck.hpp  s8_fuller.cpp  s8_fuller.hpp  (+7 more)
src/radiation/: bbflux.cpp  bbflux.hpp  calc_dz.cpp  calc_dz.hpp  calc_dz_hypsometric.cpp  disort_config.cpp  disort_config.hpp  disort_options.cpp  disort_options.hpp  disort_options_flux.cpp  disort_options_flux.hpp  flux_utils.cpp  flux_utils.hpp  get_direction_grids.hpp  parse_radiation_direction.cpp  parse_radiation_direction.hpp  parse_yaml_input.cpp  parse_yaml_input.hpp  radiation.cpp  radiation.hpp  radiation_band.cpp  radiation_band.hpp  radiation_band_forward.cpp  radiation_formatter.hpp  radiation_utils.cpp  radiation_utils.hpp
src/rtsolver/: disort.cpp  disort_impl.h  dtridgl_impl.h  rtsolver.hpp  rtsolver_dispatch.cpp  rtsolver_dispatch.cu  rtsolver_dispatch.hpp  toon_mckay89.cpp  toon_mckay89.hpp  toon_mckay89_longwave.cpp  toon_mckay89_longwave_impl.h  toon_mckay89_shortwave.cpp  toon_mckay89_shortwave_impl.h
src/utils/: alloc.h  find_resource.cpp  find_resource.hpp  get_direction_grids.hpp  layer2level.cpp  layer2level.hpp  mean_molecular_weight.hpp  netcdf_opacity_utils.hpp  parse_radiation_direction.cpp  parse_yaml_input.cpp  parse_yaml_input.hpp  read_data_tensor.cpp  read_data_tensor.hpp  read_dimvar_netcdf.cpp  read_var_pt.hpp  scattering_moment.cpp  scattering_moments.cpp  write_column_profile.hpp  write_data_ascii.cpp  write_spectral_profile.hpp
tests/: CMakeLists.txt  test_attenuator.cpp  test_bbflux.cpp  test_composition.cpp  test_disort.cpp  test_flux_utils.cpp  test_hypsometric.cpp  test_interpn.cpp  test_interpolation.cpp  test_radiation.cpp  test_read_cia_ff.cpp  test_read_rayleigh.cpp  test_read_stellar_flux.cpp  test_read_yaml.cpp  test_sonora2020.py  test_toon.cpp  test_toon.py  test_trapez.cpp  test_tridiag.cpp  test_yaml_input.cpp  toon_test.yaml  validate_toon_vs_picaso.py
tests/spectra/: test_atm_overview_cli.py  test_cia.py  test_cli.py  test_config.py  test_hitran_lines.py  test_molecule_plot_cli.py  test_plot_cli.py  (+6 more)
(+41 files in other folders)
