[build-system]
requires = ["setuptools", "wheel", "cmake<=3.30", "numpy", "ninja", "torch>=2.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyharp"
version = "1.6.7"
description = "High-performance Atmospheric Radiation Package"
authors = [
  { name="Cheng Li", email="chengcli@umich.edu" }
]
license = { text="LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pydisort>=1.2.3",
  "cmake<=3.30",
  "torch>=2.7.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/chengcli/pyharp"
Documentation = "https://pyharp.readthedocs.io"

[project.scripts]
fetch-sonora = "pyharp.api.fetch_sonora:main"
fetch-cia-legacy = "pyharp.api.fetch_cia_legacy:main"

[tool.setuptools]
packages = ["pyharp", "pyharp.api", "pyharp.sonora", "pyharp.h2_cia_legacy"]

[tool.setuptools.package-data]
"pyharp.sonora" = ["sonora2020_*.txt"]
"pyharp.h2_cia_legacy" = ["H2-H2-*.pt", "H2-He-*.pt"]
