[build-system]
requires = [
  "setuptools>=61.0.0",
  "wheel",
  "numpy",
  "ninja",
  "pydisort>=1.3.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyharp"
dynamic = ["version"]
description = "High-performance Atmospheric Radiation Package"
authors = [
  { name="Cheng Li", email="chengcli@umich.edu" }
]
license = { text="LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pydisort>=1.3.1",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/chengcli/pyharp"
Documentation = "https://pyharp.readthedocs.io"

[project.scripts]
fetch-sonora = "pyharp.api.fetch_sonora:main"
fetch-cia-legacy = "pyharp.api.fetch_cia_legacy:main"

[tool.setuptools.dynamic.version]
attr = "pyharp.__version__"

[tool.setuptools]
packages = ["pyharp", "pyharp.api", "pyharp.sonora", "pyharp.h2_cia_legacy"]
include-package-data = false

[tool.setuptools.package-data]
"pyharp" = ["harp/**/*", "lib/*.so", "lib/*.dylib"]
"pyharp.sonora" = ["sonora2020_*.txt"]
"pyharp.h2_cia_legacy" = ["H2-H2-*.pt", "H2-He-*.pt"]

[tool.setuptools.exclude-package-data]
"pyharp" = ["csrc/**/*"]
