[build-system]
requires = [
  "setuptools>=61.0.0",
  "setuptools-scm>=8",
  "wheel",
  "build",
  "ninja",
  "pydisort>=1.7.1",
  "cmake>=3.20",
  "torch==2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyharp"
dynamic = ["version"]
description = "High-performance Atmospheric Radiation Package"
authors = [
  { name="Cheng Li", email="chengcli@umich.edu" }
]
license = { text="LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "hitran-api",
  "matplotlib",
  "netCDF4",
  "numpy",
  "pydisort>=1.7.1",
  "scipy",
  "xarray",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/chengcli/pyharp"
Documentation = "https://pyharp.readthedocs.io"

[project.scripts]
fetch-sonora = "pyharp.api.fetch_sonora:main"
fetch-cia-legacy = "pyharp.api.fetch_cia_legacy:main"
pyharp-dump = "pyharp.spectra.dump_cli:main"
pyharp-plot = "pyharp.spectra.plot_cli:main"

[tool.setuptools]
packages = ["pyharp", "pyharp.api", "pyharp.sonora", "pyharp.h2_cia_legacy", "pyharp.spectra"]
include-package-data = false

[tool.setuptools.package-data]
"pyharp" = ["harp/**/*", "lib/*.so", "lib/*.dylib", "*.pyi", "py.typed"]
"pyharp.sonora" = ["sonora2020_*.txt"]
"pyharp.h2_cia_legacy" = ["H2-H2-*.pt", "H2-He-*.pt"]

[tool.setuptools.exclude-package-data]
"pyharp" = ["csrc/**/*"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
