[metadata]
name = pyharp
version = 1.3.5
description = High-performance Atmospheric Radiation Package
long_description = file: doc/get_started.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/chengcli/pyharp
author = Cheng Li
author_email = chengcli@umich.edu
keywords = atmosphere; radiation
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://github.com/chengcli/pyharp/
    Source = https://github.com/chengcli/pyharp/src
    Tracker = https://github.com/chengcli/pyharp/issues

[options]
zip_safe = False
include_package_data = False

install_requires =
  numpy>=1.12.0,<2
  torch

python_requires = >=3.8

# These options exclude data from the wheel file but not from the sdist
[options.exclude_package_data]
pyharp = *.cpp, *.cu, *.h
